20080405	Beginning on a FileLoader class, for loading binaries (e.g.
		ELFs). Also adding a test/ directory, where small test files
		used for unit tests may be stored. ELF program segments are
		loaded, but no additional information yet (entry point etc.).
		Catching std::exception at the outermost level, in order to
		print a reasonable message if the application crashes.
		Instead of loading binaries into an AddressDataBus, they are
		now loaded into a Component, which, if it has a "pc" state
		variable, is set to the entry point. Starting gxemul with
		-E testmips test/FileLoader_ELF_MIPS actually attempts to
		start running the binary now :-)
		Some more work on the GTKMM GUI: the debug output window now
		shows debug messages and commands being executed.
20080406	Adding a section about Model-View-Controller to the source
		code documentation main page, and a simple picture of what the
		component tree may look like.
		Introducing "visible class names" in addition to the normal
		class name, for components. This makes mips_cpu0 show up as
		just cpu0, which is much nicer.
		uint16_t, 32_t, and 64_t state variables are now outputted in
		hexadecimal form in ToString(), for readability.
		The ListComponents command now shows the short description of
		each command.
		Links are now generated from component names in machines.html
		to corresponding component_xxx.html pages.
		Beginning on internal support for instruction disassembly (not
		user-accessible yet).
20080407	Continuing on the instruction disassembly stuff; importing
		some MIPS defines from GXemul 0.4.6.3.
20080409	Implementing support in the CommandInterpreter for running
		methods on components. If a component name is "executed" with
		no method name given, the component tree is dumped. (This means
		that there is no need for the 'tree' command anymore, so it
		has been removed.)
		Implementing the first component method: "unassemble" for the
		CPUComponent.