@@ -120,13 +120,17 @@ Misc.
 
 	[/]  Make some initial things in the GUI work:
 		[/]  A window for the text console, including Input line!
+			[ ]  The input line should be focused by default,
+			     when starting the application, so that commands
+			     may be entered immediately.
 			[ ]  Scaling/position of the input line vs text window
 			[X]  Show text in the text window
 			[X]  Scrollbar on text window
+			[ ]  Scroll on text output!
 			[ ]  Fixed-width font in both the text window and input
 			     line.
-			[ ]  Accept keypresses in the input line :)
-				and handle commands...
+			[ ]  Accept INDIVIDUAL keypresses in the input line :)
+			     to support e.g. tab completion.
 		[X]  Undo/redo status update when necessary
 		[/]  Workspace = show current emulation setup.
 		     [ ]  Correct Invalidation.
